--- a/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 9/Main.xaml
+++ b/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 9/Main.xaml
@@ -101,7 +101,7 @@
         <InArgument x:TypeArguments="s:String[]">[{First_Name,Last_Name}]</InArgument>
       </Assign.Value>
     </Assign>
-    <Assign sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
+    <Assign DisplayName="C" sap:VirtualizedContainerService.HintSize="434,85.33333333333333" sap2010:WorkflowViewState.IdRef="Assign_2">
       <Assign.To>
         <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
       </Assign.To>
@@ -109,7 +109,7 @@
         <InArgument x:TypeArguments="x:String">[Full_Name(0)+" "+Full_Name(1)]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Message Box" sap:VirtualizedContainerService.HintSize="434,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Full Name of the User&quot;+&quot; &quot; +Result]" />
-    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="434,92" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Task7.txt" />
+    <ui:MessageBox Caption="{x:Null}" ChosenButton="{x:Null}" AutoCloseAfter="00:00:00" DisplayName="Print FullName" sap:VirtualizedContainerService.HintSize="434,86.66666666666667" sap2010:WorkflowViewState.IdRef="MessageBox_1" Text="[&quot;Full Name of the User&quot;+&quot; &quot; +Result]" />
+    <WriteLine DisplayName="Print Array Values into Text file" sap:VirtualizedContainerService.HintSize="434,92" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="Task7.txt" />
   </Sequence>
 </Activity>
